--- a/Practicum_3.1_Opdrachten.ipynb
+++ b/Practicum_3.1_Opdrachten.ipynb
@@ -29,9 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_107092\\2856191817.py:4: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "import numpy as np\n",
@@ -50,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,31 +291,31 @@
      "output_type": "stream",
      "text": [
       "UNSORTED ARRAYS\n",
-      "(6, 0, 6, 3, 4, 3, 2, 5, 2, 0, 0, 6, 5, 9, 2, 1, 6, 0, 5, 5)\n",
-      "(4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
-      "(9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
+      "(9, 9, 0, 8, 9, 5, 5, 9, 4, 6, 0, 3, 4, 6, 2, 9, 8, 4, 7, 5)\n",
+      "(5, 0, 1, 0, 1, 5, 3, 7, 8, 8, 1, 1, 4, 5, 3, 4, 9, 0, 0, 0)\n",
+      "(8, 8, 2, 2, 1, 6, 6, 9, 1, 3, 3, 1, 7, 0, 7, 4, 7, 1, 2, 0)\n",
       "\n",
       "SHELL SORT\n",
-      "[0, 0, 0, 0, 1, 2, 2, 2, 3, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 9]\n",
-      "[0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
-      "[0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n",
+      "[0, 0, 2, 3, 4, 4, 4, 5, 5, 5, 6, 6, 7, 8, 8, 9, 9, 9, 9, 9]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 1, 1, 3, 3, 4, 4, 5, 5, 5, 7, 8, 8, 9]\n",
+      "[0, 0, 1, 1, 1, 1, 2, 2, 2, 3, 3, 4, 6, 6, 7, 7, 7, 8, 8, 9]\n",
       "-----------------\n",
       "\n",
       "MERGE SORT\n",
-      "Unsorted array1 : (6, 0, 6, 3, 4, 3, 2, 5, 2, 0, 0, 6, 5, 9, 2, 1, 6, 0, 5, 5)\n",
-      "Sorted : [0, 0, 0, 0, 1, 2, 2, 2, 3, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 9]\n",
-      "Unsorted array2 : (4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
-      "Sorted : [0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
-      "Unsorted array3 : (9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
-      "Sorted : [0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n",
+      "Unsorted array1 : (9, 9, 0, 8, 9, 5, 5, 9, 4, 6, 0, 3, 4, 6, 2, 9, 8, 4, 7, 5)\n",
+      "Sorted : [0, 0, 2, 3, 4, 4, 4, 5, 5, 5, 6, 6, 7, 8, 8, 9, 9, 9, 9, 9]\n",
+      "Unsorted array2 : (5, 0, 1, 0, 1, 5, 3, 7, 8, 8, 1, 1, 4, 5, 3, 4, 9, 0, 0, 0)\n",
+      "Sorted : [0, 0, 0, 0, 0, 1, 1, 1, 1, 3, 3, 4, 4, 5, 5, 5, 7, 8, 8, 9]\n",
+      "Unsorted array3 : (8, 8, 2, 2, 1, 6, 6, 9, 1, 3, 3, 1, 7, 0, 7, 4, 7, 1, 2, 0)\n",
+      "Sorted : [0, 0, 1, 1, 1, 1, 2, 2, 2, 3, 3, 4, 6, 6, 7, 7, 7, 8, 8, 9]\n",
       "\n",
       "BUBBLE SORT\n",
-      "Unsorted array1 : (6, 0, 6, 3, 4, 3, 2, 5, 2, 0, 0, 6, 5, 9, 2, 1, 6, 0, 5, 5)\n",
-      "Sorted : [0, 0, 0, 0, 1, 2, 2, 2, 3, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 9]\n",
-      "Unsorted array2 : (4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
-      "Sorted : [0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
-      "Unsorted array3 : (9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
-      "Sorted : [0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n"
+      "Unsorted array1 : (9, 9, 0, 8, 9, 5, 5, 9, 4, 6, 0, 3, 4, 6, 2, 9, 8, 4, 7, 5)\n",
+      "Sorted : [0, 0, 2, 3, 4, 4, 4, 5, 5, 5, 6, 6, 7, 8, 8, 9, 9, 9, 9, 9]\n",
+      "Unsorted array2 : (5, 0, 1, 0, 1, 5, 3, 7, 8, 8, 1, 1, 4, 5, 3, 4, 9, 0, 0, 0)\n",
+      "Sorted : [0, 0, 0, 0, 0, 1, 1, 1, 1, 3, 3, 4, 4, 5, 5, 5, 7, 8, 8, 9]\n",
+      "Unsorted array3 : (8, 8, 2, 2, 1, 6, 6, 9, 1, 3, 3, 1, 7, 0, 7, 4, 7, 1, 2, 0)\n",
+      "Sorted : [0, 0, 1, 1, 1, 1, 2, 2, 2, 3, 3, 4, 6, 6, 7, 7, 7, 8, 8, 9]\n"
      ]
     }
    ],
