Gewerkt aan Linked Lists.

--- a/Practicum_3.2_Opdracht.ipynb
+++ b/Practicum_3.2_Opdracht.ipynb
@@ -31,30 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_129928\\2856191817.py:4: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import numpy as np\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "import math\n",
+    "import random\n",
     "warnings.simplefilter('ignore')"
    ]
   },
@@ -105,16 +91,31 @@
    "source": [
     "#### Linked List\n",
     "\n",
-    "Een linked list is een linear datastructuur dat een verzameling van zogenaamde \"nodes\" is, waarbij elke node wijst naar de locatie van de volgende node. Linked Lists worden onder andere gebruikt om stacks en queus te implementeren. \n",
-    "\n",
+    "Een linked list is een linear datastructuur dat een verzameling van zogenaamde \"nodes\" is, waarbij elke node wijst naar de locatie van de volgende node. Linked Lists worden onder andere gebruikt om stacks en queus te implementeren. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### gebruiksituaties\n",
     "1. Playlists in muziekspelers: Je kan een liedje van het begin of einde van de lijst afspelen, waarna de volgende start.\n",
     "2. Foto's in een computergallerij: de volgende en vorige foto's zijn te zien.\n",
-    "3. \"Vorige pagina\" in een browser; je kan wisselen tussen de URLs met de \"volgende\" en \"vorige\" knoppen.\n",
-    "\n",
+    "3. \"Vorige pagina\" in een browser; je kan wisselen tussen de URLs met de \"volgende\" en \"vorige\" knoppen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Big O\n",
-    "Vergeleken met een array is een linked list niet een grote, vaste collectie in het geheugen van een computer. Wanneer je een element in een linked list wilt opzoeken moet je de hele lijst aflopen. Als je een element aan het einde van de lijst zou willen toevoegen is de snelheid daarvan proportioneel tot de grootte van de linked lijst, wat resulteert in en Big O notatie van O(n). Deze redenering volgende is het toevoegen van een element aan het begin van de lijst nog sneller; je hoeft immer niet de volledige lijst af te lopen. Omdat deze operatie niet afhankelijk is van de grootte van de lijst heeft *alleen* deze operatie een Big O notatie van O(1).\n",
-    "\n",
+    "Vergeleken met een array is een linked list niet een grote, vaste collectie in het geheugen van een computer. Wanneer je een element in een linked list wilt opzoeken moet je de hele lijst aflopen. Als je een element aan het einde van de lijst zou willen toevoegen is de snelheid daarvan proportioneel tot de grootte van de linked lijst, wat resulteert in en Big O notatie van O(n). Deze redenering volgende is het toevoegen van een element aan het begin van de lijst nog sneller; je hoeft immer niet de volledige lijst af te lopen. Omdat deze operatie niet afhankelijk is van de grootte van de lijst heeft *alleen* deze operatie een Big O notatie van O(1)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Voor- en Nadelen\n",
     "\n",
     "Voordelen : \n",
@@ -123,9 +124,13 @@
     "\n",
     "Nadelen : \n",
     "1. Vergeleken met een Array is er meer geheugen nodig omdat elk element een pointer naar de volgende heeft. \n",
-    "2. Zoekoperaties op een Linked List zijn traag omdat je geen toegang hebt tot random access. \n",
-    "\n",
-    "\n",
+    "2. Zoekoperaties op een Linked List zijn traag omdat je geen toegang hebt tot random access. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Bronnen\n",
     "1. McKenzie. (2021, December 7). Arrays, linked lists, and big o notation - McKenzie - medium. Medium. https://medium.com/@mckenziefiege/arrays-linked-lists-and-big-o-notation-486727b6259b \n",
     "2. GfG. (2023, December 6). Python Linked List. GeeksforGeeks. https://www.geeksforgeeks.org/python-linked-list/\n",
@@ -133,10 +138,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "##### Programma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array : [951, 701, 930, 786, 807, 668, 395, 229, 115, 697, 689, 717, 431, 781, 74, 981, 453, 81, 90, 186, 98, 774, 99, 502, 106, 705, 946, 151, 587, 100, 37, 780, 46, 569, 795, 686, 800, 554, 190, 7, 401, 819, 351, 450, 393, 11, 758, 148, 474, 155, 358, 743, 308, 641, 955, 854, 85, 855, 269, 542, 977, 487, 485, 149, 500, 429, 950, 44, 711, 473, 516, 476, 600, 904, 280, 691, 744, 547, 252, 386, 483, 170, 39, 967, 290, 824, 590, 88, 191, 285, 205, 948, 804, 462, 652, 460, 934]\n",
+      "Waarde 445 is niet gevonden.\n"
+     ]
+    }
+   ],
    "source": [
     "class Node:    \n",
     "    def __init__(self,value):        \n",
@@ -157,7 +178,44 @@
     "        \n",
     "class LinkedList:\n",
     "    def __init__(self):\n",
-    "        self.head = None"
+    "        self.head = None\n",
+    "        \n",
+    "    def push(self, new_key):\n",
+    "        new_node = Node(new_key)\n",
+    "        new_node.next = self.head\n",
+    "        self.head = new_node\n",
+    "        \n",
+    "    def search(self, key):\n",
+    "        temp = self.head\n",
+    "        tempArr = []\n",
+    "        while (temp):\n",
+    "            tempArr.append(temp.value)\n",
+    "            temp = temp.next\n",
+    "        if key in tempArr:\n",
+    "            return True\n",
+    "        else: \n",
+    "            return False\n",
+    "        \n",
+    "randomIntArray = []\n",
+    "linkedListArray = LinkedList()\n",
+    "for i in range(100):\n",
+    "    r=random.randint(1,1000)\n",
+    "    if r not in randomIntArray:\n",
+    "        randomIntArray.append(r)\n",
+    "    \n",
+    "print(f\"Array : {randomIntArray}\")\n",
+    "        \n",
+    "for i in randomIntArray:\n",
+    "    linkedListArray.push(i)\n",
+    "    \n",
+    "searchValue = 445\n",
+    "if linkedListArray.search(searchValue):\n",
+    "    print(f\"Waarde {searchValue} gevonden.\")\n",
+    "else :\n",
+    "    print(f\"Waarde {searchValue} is niet gevonden.\")    \n",
+    "            \n",
+    "        \n",
+    "        \n"
    ]
   },
   {
