Gewerkt aan Graphs.

--- a/Practicum_3.2_Opdracht.ipynb
+++ b/Practicum_3.2_Opdracht.ipynb
@@ -389,20 +389,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### DATASTRUCTUUR 3\n",
+    "#### Graphs\n",
     "\n",
+    "<img src=\"Assets\\Week 3\\undirectedgraph.png\" width=400 height=300>\n",
+    "\n",
+    "\n",
+    "Graphs zijn non-lineaire datastructuren opgebouwd uit Nodes(edges/vertices) en Edges(lines/arcs), vaak gedefinieerd op de volgende manier: G={N,E}. De twee meest voorkomende soorten graphs zijn Directen en Undirected graphs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Gebruiksituaties\n",
     "\n",
-    "\n",
-    "##### Big O\n",
-    "\n",
-    "\n",
-    "\n",
-    "##### Voor- en Nadelen\n",
-    "\n",
-    "\n",
-    "\n",
-    "##### Bronnen"
+    "Graps worden veelal gebruikt om problemen in de echte wereld te modelleren, zoals sociale, transportatie en communicatie netwerken. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Big O"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Voor- en Nadelen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Bronnen\n",
+    "1. GfG. (2023, April 17). Applications, Advantages and Disadvantages of Graph. GeeksforGeeks. https://www.geeksforgeeks.org/applications-advantages-and-disadvantages-of-graph/"
    ]
   }
  ],
