Bestanden een andere naam gegeven.

--- a/Practicum_2.3_Opdrachten_A-Delgado.ipynb
+++ b/Practicum_2.3_Opdrachten_A-Delgado.ipynb
@@ -3594,7 +3594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Vreemd verwoorde opdracht. Volgens mij moet kort <= 12 jaar, en lang >25 jaar zijn.*"
+    "*Vreemd verwoorde opdracht. Volgens mij moet kort <12 jaar, en lang >=12 jaar zijn.*"
    ]
   },
   {
