--- a/Practicum_3.2_Opdracht_A-Delgado.ipynb
+++ b/Practicum_3.2_Opdracht_A-Delgado.ipynb
@@ -391,10 +391,10 @@
    "source": [
     "#### Graphs\n",
     "\n",
-    "<img src=\"Assets\\Week 3\\undirectedgraph.png\" width=400 height=300>\n",
+    "<img src=\"Assets\\Week 3\\undirectedgraph.png\" width=600 height=300>\n",
     "\n",
     "\n",
-    "Graphs zijn non-lineaire datastructuren opgebouwd uit Nodes(edges/vertices) en Edges(lines/arcs), vaak gedefinieerd op de volgende manier: G={N,E}. De twee meest voorkomende soorten graphs zijn Directen en Undirected graphs."
+    "Graphs zijn non-lineaire datastructuren opgebouwd uit Nodes(edges/vertices) en Edges(lines/arcs), vaak gedefinieerd op de volgende manier: G={N,E}. De twee meest voorkomende soorten graphs zijn Directen en Undirected graphs. Het verschil tussen de twee is dat bij Directed Graphs de Edges een directie hebben dat een specifiek pad van Node A naar Node B aanduidt. In de afbeelding hierboven is een Undirected Graph afgebeeld. "
    ]
   },
   {
@@ -403,7 +403,9 @@
    "source": [
     "##### Gebruiksituaties\n",
     "\n",
-    "Graps worden veelal gebruikt om problemen in de echte wereld te modelleren, zoals sociale, transportatie en communicatie netwerken. "
+    "Graps worden veelal gebruikt om problemen in de echte wereld te modelleren, zoals sociale, transportatie en communicatie netwerken. \n",
+    "\n",
+    "Een bekend algoritme dat gebruikt maakt van Graphs is het Dijkstra Algoritme. Dit algoritme berekent het kortste pad tussen twee Nodes in een Graph te berekenen."
    ]
   },
   {
@@ -417,7 +419,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Voor- en Nadelen"
+    "##### Voor- en Nadelen\n",
+    "\n",
+    "Voordelen : \n",
+    "1. Effeciente verwerking van data\n",
+    "2. Mogelijkheid om complexe data te modelleren\n",
+    "3. Visuele representatie van data\n",
+    "\n",
+    "Nadelen : \n",
+    "1. Gelimiteerd in representatie van data(alleen relaties van objecten kunnen weergeven worden)\n",
+    "2. Geen standaardizatie\n",
+    "3. Moeilijk schaalbaar"
    ]
   },
   {
@@ -425,7 +437,9 @@
    "metadata": {},
    "source": [
     "##### Bronnen\n",
-    "1. GfG. (2023, April 17). Applications, Advantages and Disadvantages of Graph. GeeksforGeeks. https://www.geeksforgeeks.org/applications-advantages-and-disadvantages-of-graph/"
+    "1. GfG. (2023, April 17). Applications, Advantages and Disadvantages of Graph. GeeksforGeeks. https://www.geeksforgeeks.org/applications-advantages-and-disadvantages-of-graph/\n",
+    "2. Graph Representation - javatpoint. (n.d.). www.javatpoint.com. https://www.javatpoint.com/graph-representation\n",
+    "3. Applications of the 20 most popular graph algorithms. (n.d.). https://memgraph.com/blog/graph-algorithms-applications"
    ]
   }
  ],
