--- a/Practicum_3.2_Opdracht_A-Delgado.ipynb
+++ b/Practicum_3.2_Opdracht_A-Delgado.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "#### Binary Tree\n",
     "\n",
-    "<img src=\"Assets\\Week 3\\Binary_tree_v2.svg.png\" width=400 height=400> \n",
+    "<img src=\"Assets\\Week 3\\Binary_tree_v2.svg.png\" width=600 height=400> \n",
     "\n",
     "\n",
     "Het bovenste element van de boom is de \"root\". Elementen zonder child-nodes of die onderaan de boom staan zijn \"leafnodes\". Nodes dat boven een andere node staan zijn \"Parent nodes\", en nodes die ergens onder staan zijn \"Child nodes\" Een Binary Tree Node bestaat uit de volgende componenten : \n",
@@ -285,6 +285,13 @@
     "1. GfG. (2024, February 22). Binary Tree Data structure. GeeksforGeeks. https://www.geeksforgeeks.org/binary-tree-data-structure/\n",
     "2. Do binary trees serve a specific purpose in storing hierarchical data? What is their canonical use? (n.d.). Software Engineering Stack Exchange. https://softwareengineering.stackexchange.com/questions/288231/do-binary-trees-serve-a-specific-purpose-in-storing-hierarchical-data-what-is-t\n",
     "3. GfG. (2023, April 5). Sorted array to balanced BST. GeeksforGeeks. https://www.geeksforgeeks.org/sorted-array-to-balanced-bst/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Programma"
    ]
   },
   {
@@ -394,7 +401,7 @@
     "<img src=\"Assets\\Week 3\\undirectedgraph.png\" width=600 height=300>\n",
     "\n",
     "\n",
-    "Graphs zijn non-lineaire datastructuren opgebouwd uit Nodes(edges/vertices) en Edges(lines/arcs), vaak gedefinieerd op de volgende manier: G={N,E}. De twee meest voorkomende soorten graphs zijn Directen en Undirected graphs. Het verschil tussen de twee is dat bij Directed Graphs de Edges een directie hebben dat een specifiek pad van Node A naar Node B aanduidt. In de afbeelding hierboven is een Undirected Graph afgebeeld. "
+    "Graphs zijn non-lineaire datastructuren opgebouwd uit Nodes(vertices/vertex) en Edges(lines/arcs), vaak gedefinieerd op de volgende manier: G={N,E}. De twee meest voorkomende soorten graphs zijn Directen en Undirected graphs. Het verschil tussen de twee is dat bij Directed Graphs de Edges een directie hebben dat een specifiek pad van Node A naar Node B aanduidt. In de afbeelding hierboven is een Undirected Graph afgebeeld. "
    ]
   },
   {
@@ -403,16 +410,21 @@
    "source": [
     "##### Gebruiksituaties\n",
     "\n",
-    "Graps worden veelal gebruikt om problemen in de echte wereld te modelleren, zoals sociale, transportatie en communicatie netwerken. \n",
+    "Graphs worden veelal gebruikt om problemen in de echte wereld te modelleren, zoals sociale, transportatie en communicatie netwerken. \n",
     "\n",
-    "Een bekend algoritme dat gebruikt maakt van Graphs is het Dijkstra Algoritme. Dit algoritme berekent het kortste pad tussen twee Nodes in een Graph te berekenen."
+    "Een bekend algoritme dat gebruikt maakt van Graphs is het Dijkstra Algoritme. Dit algoritme berekent het kortste pad tussen twee Nodes in een Graph te berekenen.\n",
+    "Andere algoritmes zijn Breadth First Search (BFS) en Depth First Search (DFS). De eerste doorzoekt een graph door elke laag af te lopen, en de tweede doorzoekt een graph om telkens een route tot de uiterste tak te belopen."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Big O"
+    "##### Big O\n",
+    "\n",
+    "De Big O notatie voor de tijdscomplexiteit van een Graph is O(1). Dit is constant omdat er in een Adjecancy matrix alleen een kolom en een rij gevonden hoeven te worden. De Big O notatie voor de ruimte van een graph is echter O(V^2), waarbij V het aantal Edges is. Omdat een matrix uit rijen en kolommen bestaat heb je bij bijvoorbeeld 5 rijen * 5 kolommen = 25 elementen nodig. Naarmate dit in grootte toeneemt eist dit steeds meer geheugen op. \n",
+    "\n",
+    "In het geval dat er gebruik gemaakt wordt van een Adjacency List zijn de Big O notatie van de tijdscomplexiteit O(V) en voor de ruimte O(V + E), waarbij V voor Vertices(Nodes) staat en E voor Edges(relaties). "
    ]
   },
   {
@@ -439,7 +451,122 @@
     "##### Bronnen\n",
     "1. GfG. (2023, April 17). Applications, Advantages and Disadvantages of Graph. GeeksforGeeks. https://www.geeksforgeeks.org/applications-advantages-and-disadvantages-of-graph/\n",
     "2. Graph Representation - javatpoint. (n.d.). www.javatpoint.com. https://www.javatpoint.com/graph-representation\n",
-    "3. Applications of the 20 most popular graph algorithms. (n.d.). https://memgraph.com/blog/graph-algorithms-applications"
+    "3. Applications of the 20 most popular graph algorithms. (n.d.). https://memgraph.com/blog/graph-algorithms-applications\n",
+    "4. Shortest Path with Dijkstra’s Algorithm. (n.d.). https://bradfieldcs.com/algos/graphs/dijkstras-algorithm/\n",
+    "5. Bhatele, S. (2023, April 21). Graph Implementation in Python - Experience Stack. Medium. https://experiencestack.co/graph-implementation-in-python-916fc3b6a8a \n",
+    "6. Dijkstra’s algorithm. (n.d.). https://www.programiz.com/dsa/dijkstra-algorithm\n",
+    "8. Breadth-First search in Python - Javatpoint. (n.d.). www.javatpoint.com. https://www.javatpoint.com/breadth-first-search-in-python\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Programma\n",
+    "\n",
+    "_Onderstaande programma is een object-georienteerde Graph._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#representatie van een Node/Vertex\n",
+    "class Node:\n",
+    "    def __init__(self, Node_id):\n",
+    "        self.id = Node_id\n",
+    "        #representatie van de Edges/Lines van een Node\n",
+    "        self.neighbors = []\n",
+    "\n",
+    "    #Methode om een Edge toe te voegen als het niet al bestaat\n",
+    "    def add_neighbor(self, neighbor):\n",
+    "        if neighbor not in self.neighbors:\n",
+    "            self.neighbors.append(neighbor)\n",
+    "\n",
+    "\n",
+    "class Graph:\n",
+    "    \n",
+    "    def __init__(self) :\n",
+    "        self.nodes = {}\n",
+    "\n",
+    "    #Voeg een Node object toe aan de lijst van nodes\n",
+    "    #als het object nog niet in de lijst staat\n",
+    "    def add_node(self, node):\n",
+    "        if isinstance(node, Node) and node.id not in self.nodes:\n",
+    "            self.nodes[node.id] = node\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    #Voeg een relatie tussen 2 nodes toe\n",
+    "    def add_edge(self, node1, node2):\n",
+    "        if node1 in self.nodes and node2 in self.nodes:\n",
+    "            self.nodes[node1].add_neighbor(node2)\n",
+    "            self.nodes[node1].add_neighbor(node2)\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "\n",
+    "    def get_nodes(self):\n",
+    "        return self.nodes.keys()\n",
+    "\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.nodes.values())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(graph, start):\n",
+    "    visited = set()\n",
+    "    queue = [start]\n",
+    "    visited.add(start)\n",
+    "    while queue:\n",
+    "        node = queue.pop(0)\n",
+    "        print(node, end=' ')\n",
+    "        for neighbor in graph[node]:\n",
+    "            if neighbor not in visited:\n",
+    "                queue.append(neighbor)\n",
+    "                visited.add(neighbor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 = [1, 2]\n",
+      "1 = [2, 3]\n",
+      "2 = [3]\n",
+      "3 = []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a graph with 4 vertices and 5 edges\n",
+    "graph = Graph()\n",
+    "for i in range(4):\n",
+    "    graph.add_node(Node(i))\n",
+    "graph.add_edge(0, 1)\n",
+    "graph.add_edge(0, 2)\n",
+    "graph.add_edge(1, 2)\n",
+    "graph.add_edge(1, 3)\n",
+    "graph.add_edge(2, 3)\n",
+    "\n",
+    "for node in graph.nodes.values() :\n",
+    "    print(f\"{node.id} = {node.neighbors}\")\n"
    ]
   }
  ],
