--- a/Practicum_3.2_Opdracht_A-Delgado.ipynb
+++ b/Practicum_3.2_Opdracht_A-Delgado.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,8 @@
     "import pandas as pd\n",
     "import math\n",
     "import random\n",
+    "import pprint\n",
+    "from collections import deque\n",
     "warnings.simplefilter('ignore')"
    ]
   },
@@ -424,7 +426,10 @@
     "\n",
     "De Big O notatie voor de tijdscomplexiteit van een Graph is O(1). Dit is constant omdat er in een Adjecancy matrix alleen een kolom en een rij gevonden hoeven te worden. De Big O notatie voor de ruimte van een graph is echter O(V^2), waarbij V het aantal Edges is. Omdat een matrix uit rijen en kolommen bestaat heb je bij bijvoorbeeld 5 rijen * 5 kolommen = 25 elementen nodig. Naarmate dit in grootte toeneemt eist dit steeds meer geheugen op. \n",
     "\n",
-    "In het geval dat er gebruik gemaakt wordt van een Adjacency List zijn de Big O notatie van de tijdscomplexiteit O(V) en voor de ruimte O(V + E), waarbij V voor Vertices(Nodes) staat en E voor Edges(relaties). "
+    "In het geval dat er gebruik gemaakt wordt van een Adjacency List zijn de Big O notatie van de tijdscomplexiteit O(V) en voor de ruimte O(V + E), waarbij V voor Vertices(Nodes) staat en E voor Edges(relaties). \n",
+    "\n",
+    "\n",
+    "Voor de Breadth First Search algoritme is de Big O notatie van de tijdscomplexiteit O(V+E), waarbij V staat voor Vertex en E voor Edge. Het algoritme bezoekt *elke* Vertex op het niveau voordat het naar het volgende level gaat. In het slechtste geval moet het algoritme dus *elke* Vertex en Edge in de Graph bezoeken. "
    ]
   },
   {
@@ -455,21 +460,27 @@
     "4. Shortest Path with Dijkstra’s Algorithm. (n.d.). https://bradfieldcs.com/algos/graphs/dijkstras-algorithm/\n",
     "5. Bhatele, S. (2023, April 21). Graph Implementation in Python - Experience Stack. Medium. https://experiencestack.co/graph-implementation-in-python-916fc3b6a8a \n",
     "6. Dijkstra’s algorithm. (n.d.). https://www.programiz.com/dsa/dijkstra-algorithm\n",
-    "8. Breadth-First search in Python - Javatpoint. (n.d.). www.javatpoint.com. https://www.javatpoint.com/breadth-first-search-in-python\n"
+    "8. Breadth-First search in Python - Javatpoint. (n.d.). www.javatpoint.com. https://www.javatpoint.com/breadth-first-search-in-python\n",
+    "9. Ahmed, A. (2023, February 13). Pretty Print Dictionary in Python: pprint & json (with examples). FavTutor. https://favtutor.com/blogs/pretty-print-dictionary-python\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Programma\n",
-    "\n",
-    "_Onderstaande programma is een object-georienteerde Graph._"
+    "##### Programma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Object Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,11 +490,16 @@
     "        self.id = Node_id\n",
     "        #representatie van de Edges/Lines van een Node\n",
     "        self.neighbors = []\n",
+    "        self.neighbor_iter = iter(self.neighbors)\n",
     "\n",
     "    #Methode om een Edge toe te voegen als het niet al bestaat\n",
     "    def add_neighbor(self, neighbor):\n",
     "        if neighbor not in self.neighbors:\n",
     "            self.neighbors.append(neighbor)\n",
+    "\n",
+    "#deze methode zorgt ervoor dat je over een object van deze klasse kan loopen\n",
+    "    def __iter__(self):\n",
+    "        return self.neighbor_iter\n",
     "\n",
     "\n",
     "class Graph:\n",
@@ -504,7 +520,7 @@
     "    def add_edge(self, node1, node2):\n",
     "        if node1 in self.nodes and node2 in self.nodes:\n",
     "            self.nodes[node1].add_neighbor(node2)\n",
-    "            self.nodes[node1].add_neighbor(node2)\n",
+    "            self.nodes[node2].add_neighbor(node1)\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -521,36 +537,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bfs(graph, start):\n",
-    "    visited = set()\n",
-    "    queue = [start]\n",
-    "    visited.add(start)\n",
+    "def breadth_first_search(tree, start):\n",
+    "    queue = deque([start])\n",
+    "    visited = []\n",
+    "\n",
     "    while queue:\n",
-    "        node = queue.pop(0)\n",
-    "        print(node, end=' ')\n",
-    "        for neighbor in graph[node]:\n",
-    "            if neighbor not in visited:\n",
-    "                queue.append(neighbor)\n",
-    "                visited.add(neighbor)"
+    "        #node is het item aan de linkerkant van queue, verwijder\n",
+    "        node = queue.popleft()\n",
+    "        #eerst bezochte item is node\n",
+    "        visited.append(node)\n",
+    "\n",
+    "        #loop over elk element in tree\n",
+    "        for child in tree[node]:\n",
+    "            #als element nog niet in visited(afgelegde route)\n",
+    "            if child not in visited and child not in queue:\n",
+    "                queue.append(child)\n",
+    "                \n",
+    "    return visited"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 = [1, 2]\n",
-      "1 = [2, 3]\n",
-      "2 = [3]\n",
-      "3 = []\n"
+      "{0: <__main__.Node object at 0x00000220D2272CC0>,\n",
+      " 1: <__main__.Node object at 0x00000220D22BB680>,\n",
+      " 2: <__main__.Node object at 0x00000220D22BAF90>,\n",
+      " 3: <__main__.Node object at 0x00000220D22B93A0>}\n",
+      "\n",
+      "[1, 2]\n",
+      "[0, 2, 3]\n",
+      "[0, 1, 3]\n",
+      "[1, 2]\n",
+      "\n",
+      "[3, 1, 2, 0]\n"
      ]
     }
    ],
@@ -565,8 +594,22 @@
     "graph.add_edge(1, 3)\n",
     "graph.add_edge(2, 3)\n",
     "\n",
-    "for node in graph.nodes.values() :\n",
-    "    print(f\"{node.id} = {node.neighbors}\")\n"
+    "#Vorm van de graph zoals hierboven gedeclareerd\n",
+    "    #    0\n",
+    "    #   / \\\n",
+    "    #  1---2\n",
+    "    #   \\ /\n",
+    "    #    3\n",
+    "\n",
+    "# for node in graph.nodes.values() :\n",
+    "#     print(f\"{node.id} = {node.neighbors}\")\n",
+    "\n",
+    "pprint.pprint(graph.nodes)\n",
+    "print()\n",
+    "for i in graph.nodes:\n",
+    "    pprint.pprint(graph.nodes[i].neighbors)\n",
+    "print()\n",
+    "print(breadth_first_search(graph.nodes,3))"
    ]
   }
  ],
