Uitleg Big O notatie van Binary Tree uitgebreid.

--- a/Practicum_3.2_Opdracht_A-Delgado.ipynb
+++ b/Practicum_3.2_Opdracht_A-Delgado.ipynb
@@ -31,9 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_3200\\885716671.py:4: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "import numpy as np\n",
@@ -93,14 +108,16 @@
    "source": [
     "#### Linked List\n",
     "\n",
-    "Een linked list is een linear datastructuur dat een verzameling van zogenaamde \"nodes\" is, waarbij elke node wijst naar de locatie van de volgende node. Linked Lists worden onder andere gebruikt om stacks en queus te implementeren. "
+    "Een linked list is een linear datastructuur dat een verzameling van zogenaamde \"nodes\" is, waarbij elke node wijst naar de locatie van de volgende node. Linked Lists worden onder andere gebruikt om stacks en queues te implementeren. \n",
+    "\n",
+    "Een bekend algoritme dat gebruik maakt van linked lists is het sorterings algoritme Quicksort. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### gebruiksituaties\n",
+    "##### Gebruiksituaties\n",
     "1. Playlists in muziekspelers: Je kan een liedje van het begin of einde van de lijst afspelen, waarna de volgende start.\n",
     "2. Foto's in een computergallerij: de volgende en vorige foto's zijn te zien.\n",
     "3. \"Vorige pagina\" in een browser; je kan wisselen tussen de URLs met de \"volgende\" en \"vorige\" knoppen."
@@ -136,27 +153,33 @@
     "##### Bronnen\n",
     "1. McKenzie. (2021, December 7). Arrays, linked lists, and big o notation - McKenzie - medium. Medium. https://medium.com/@mckenziefiege/arrays-linked-lists-and-big-o-notation-486727b6259b \n",
     "2. GfG. (2023, December 6). Python Linked List. GeeksforGeeks. https://www.geeksforgeeks.org/python-linked-list/\n",
-    "3. Wilkinson, P. (2022, September 30). An introduction to Python linked list and how to create one. Built In. https://builtin.com/data-science/python-linked-list"
+    "3. Wilkinson, P. (2022, September 30). An introduction to Python linked list and how to create one. Built In. https://builtin.com/data-science/python-linked-list\n",
+    "4. Mastering Linked Lists: 11 Algorithms for Efficient Data Manipulation. (2023, June 13). Armin Norouzi. https://arminnorouzi.github.io/posts/2023/06/blog-post-3/\n",
+    "5. Majeed, A. (2023, July 29). Data Structure and Algorithms — Linked List - Ahsan Majeed - Medium. Medium. https://medium.com/@ahsan.majeed086/data-structure-and-algorithms-linked-list-bdea21f38e70"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Programma"
+    "##### Programma\n",
+    "\n",
+    "Hieronder is een implementatie van een Singly Linked Lists (Lijst is maar vanaf 1 kant te navigeren)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array : [951, 701, 930, 786, 807, 668, 395, 229, 115, 697, 689, 717, 431, 781, 74, 981, 453, 81, 90, 186, 98, 774, 99, 502, 106, 705, 946, 151, 587, 100, 37, 780, 46, 569, 795, 686, 800, 554, 190, 7, 401, 819, 351, 450, 393, 11, 758, 148, 474, 155, 358, 743, 308, 641, 955, 854, 85, 855, 269, 542, 977, 487, 485, 149, 500, 429, 950, 44, 711, 473, 516, 476, 600, 904, 280, 691, 744, 547, 252, 386, 483, 170, 39, 967, 290, 824, 590, 88, 191, 285, 205, 948, 804, 462, 652, 460, 934]\n",
-      "Waarde 445 is niet gevonden.\n"
+      "Array : [791, 88, 433, 9, 191, 485, 41, 767, 275, 268, 675, 363, 352, 879, 954, 804, 962, 900, 855, 942, 966, 237, 677, 253, 910, 158, 336, 564, 735, 230, 45, 862, 104, 610, 188, 744, 117, 267, 209, 626, 590, 813, 219, 494, 119, 989, 701, 358, 616, 220, 593, 757, 315, 693, 4, 888, 938, 40, 679, 951, 608, 860, 214, 459, 759, 351, 930, 96, 194, 505, 77, 417, 818, 581, 906, 324, 543, 991, 546, 299, 264, 18, 724, 822, 660, 174, 116, 319, 574, 36, 13, 388, 974, 393, 731, 245]\n",
+      "Waarde 445 is niet gevonden.\n",
+      "\n",
+      "245 -> 731 -> 393 -> 974 -> 388 -> 13 -> 36 -> 574 -> 319 -> 116 -> 174 -> 660 -> 822 -> 724 -> 18 -> 264 -> 299 -> 546 -> 991 -> 543 -> 324 -> 906 -> 581 -> 818 -> 417 -> 77 -> 505 -> 194 -> 96 -> 930 -> 351 -> 759 -> 459 -> 214 -> 860 -> 608 -> 951 -> 679 -> 40 -> 938 -> 888 -> 4 -> 693 -> 315 -> 757 -> 593 -> 220 -> 616 -> 358 -> 701 -> 989 -> 119 -> 494 -> 219 -> 813 -> 590 -> 626 -> 209 -> 267 -> 117 -> 744 -> 188 -> 610 -> 104 -> 862 -> 45 -> 230 -> 735 -> 564 -> 336 -> 158 -> 910 -> 253 -> 677 -> 237 -> 966 -> 942 -> 855 -> 900 -> 962 -> 804 -> 954 -> 879 -> 352 -> 363 -> 675 -> 268 -> 275 -> 767 -> 41 -> 485 -> 191 -> 9 -> 433 -> 88 -> 791 -> None\n"
      ]
     }
    ],
@@ -198,6 +221,15 @@
     "        else: \n",
     "            return False\n",
     "        \n",
+    "    def print_list(self):\n",
+    "        current = self.head\n",
+    "        if self.head is not None:\n",
+    "            while current is not None:\n",
+    "                print(current.get_data(), end =\" -> \")\n",
+    "                current = current.next\n",
+    "            print(\"None\")\n",
+    "            \n",
+    "        \n",
     "randomIntArray = []\n",
     "linkedListArray = LinkedList()\n",
     "for i in range(100):\n",
@@ -215,9 +247,9 @@
     "    print(f\"Waarde {searchValue} gevonden.\")\n",
     "else :\n",
     "    print(f\"Waarde {searchValue} is niet gevonden.\")    \n",
-    "            \n",
-    "        \n",
-    "        \n"
+    "    \n",
+    "print()\n",
+    "linkedListArray.print_list()"
    ]
   },
   {
@@ -237,7 +269,17 @@
     "\n",
     "Bij het beschrijven van de inhoud van een Binary Tree zijn de termen Size(grootte) en Depth(diepte) belangrijk. Size slaat op het aantal Nodes in de Tree. Depth is hoeveel lagen er zijn in de hierarchie. Om het plaatje hierboven als een voorbeeld te nemen: Er zijn 15 elementen, dus het heeft een Size voor 15. Er zijn 3 lagen, dus het heeft een Depth van 3. \n",
     "\n",
-    "Bij het opstellen van een Binary Tree is het belangrijk om te onthouden dat de parent een grotere waarde moet hebben dan de linker child node maar groter dan de rechter child node. Dus :   Child1 (waarde 2) < Parent (waarde 4) < Child2 (waarde 6)"
+    "Bij het opstellen van een Binary Tree is het belangrijk om te onthouden dat de parent een grotere waarde moet hebben dan de linker child node maar groter dan de rechter child node. Dus :   Child1 (waarde 2) < Parent (waarde 4) < Child2 (waarde 6)\n",
+    "\n",
+    "\n",
+    "\n",
+    "Bekende algoritmes dat gebruik maken van Binary Tree zijn Breadth First Search, Depth First Search en Tree Sort. \n",
+    "\n",
+    "Er zijn ook verschillen tussen gebalanceerde en ongebalanceerde binary trees. In de afbeelding hierboven is elk directe child node het dichtsbijbzijnde lagere of hogere waarde; dat is een voorbeeld van een *gebalanceerde* binary tree. Hieronder is een voorbeeld van een ongebalanceerde binary tree.\n",
+    "\n",
+    "<img src=\"Assets\\Week 3\\Unbalanced_Binary_Tree.jpg\" height=400 width=400>\n",
+    "\n",
+    "Zoals te zien zijn alle waardes rechts van de root wel een hogere waarde, maar directe child nodes zijn niet de dichtsbijzijnde waardes. Omdat dit ongebalanceerd is duren operaties op een dergelijke tree langer."
    ]
   },
   {
@@ -257,7 +299,17 @@
    "source": [
     "##### Big O\n",
     "\n",
-    "Voor Binary Trees duren operaties gemiddeld O(log *n*). In het slechtste geval duurt het O(n). Binary Tree is dus een efficient data structuur. "
+    "Voor Binary Trees duren operaties gemiddeld O(log *n*). In het slechtste geval duurt het O(*n*). Binary Tree is dus een efficient data structuur. \n",
+    "\n",
+    "In het geval van een Binary Search Tree (hiervoor moet elke waarde links van de root kleiner zijn dan de root, en groter aan de rechterkant van de root) is de Big O notatie O(log *n*). Deze notatie wordt behaald door op elk level van de boom de ruimte(Nodes) dat doorzocht moet worden te halveren door de waarde van de huidige node te vergelijken met de root node. Stel dat de boom van een gebalanceerde Binary Search Tree er als volgt uitziet:\n",
+    "\n",
+    "            50\n",
+    "           /  \\\n",
+    "          30   60\n",
+    "         / \\\n",
+    "        20 40\n",
+    "\n",
+    "En de target waarde 40 is. Bij waarde 30 wordt alleen gekeken naar de rechter node, omdat grotere waardes aan de rechterkant moeten liggen. Bij elke stap wordt er dus naar steeds minder ruimte/paden gekeken."
    ]
   },
   {
@@ -298,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,6 +557,7 @@
     "class Graph:\n",
     "    \n",
     "    def __init__(self) :\n",
+    "        #nodes als dictonary opslaan zodat aantal nodes makkelijk opgehaald kan worden.\n",
     "        self.nodes = {}\n",
     "\n",
     "    #Voeg een Node object toe aan de lijst van nodes\n",
@@ -537,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,17 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: <__main__.Node object at 0x00000220D2272CC0>,\n",
-      " 1: <__main__.Node object at 0x00000220D22BB680>,\n",
-      " 2: <__main__.Node object at 0x00000220D22BAF90>,\n",
-      " 3: <__main__.Node object at 0x00000220D22B93A0>}\n",
+      "{0: <__main__.Node object at 0x000001C2D4B11B50>,\n",
+      " 1: <__main__.Node object at 0x000001C2D4B77920>,\n",
+      " 2: <__main__.Node object at 0x000001C2D4B75CA0>,\n",
+      " 3: <__main__.Node object at 0x000001C2D4B77A70>}\n",
       "\n",
       "[1, 2]\n",
       "[0, 2, 3]\n",
@@ -580,17 +633,6 @@
       "[1, 2]\n",
       "\n",
       "[3, 1, 2, 0]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
