Begin gemaakt aan PC4.3.

--- a/Week 2/Practicum_2.3_Opdrachten_A-Delgado.ipynb
+++ b/Week 2/Practicum_2.3_Opdrachten_A-Delgado.ipynb
@@ -24,30 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_131940\\476482988.py:4: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import warnings\n",
     "import numpy as np\n",
     "import sqlite3\n",
     "import pandas as pd\n",
+    "from decimal import Decimal\n",
     "warnings.simplefilter('ignore')"
    ]
   },
@@ -74,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -82,16 +68,16 @@
      "output_type": "stream",
      "text": [
       "Connected to sqlite.\n",
-      "<sqlite3.Connection object at 0x000002195662E2F0>\n"
+      "<sqlite3.Connection object at 0x000002861E7F1D50>\n"
      ]
     }
    ],
    "source": [
-    "global con\n",
+    "con = None\n",
     "def dataframe() : \n",
     "    try : \n",
     "        global con \n",
-    "        con = sqlite3.connect(\"Assets/Week 2/go_sales.sqlite\")\n",
+    "        con = sqlite3.connect(\"../Assets/Week 2/go_sales.sqlite\")\n",
     "        print(\"Connected to sqlite.\")\n",
     "    except sqlite3.Error as error: \n",
     "        print(\"Failed to read data from sqlite table\", error)\n",
@@ -173,28 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Id                   int64\n",
-      "SALES_STAFF_CODE    object\n",
-      "SALES_YEAR          object\n",
-      "SALES_PERIOD        object\n",
-      "RETAILER_NAME       object\n",
-      "PRODUCT_NUMBER      object\n",
-      "SALES_TARGET        object\n",
-      "RETAILER_CODE       object\n",
-      "TRIAL888            object\n",
-      "dtype: object\n"
+     "ename": "NameError",
+     "evalue": "name 'product' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m product[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPRODUCTION_COST\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mproduct\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPRODUCTION_COST\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(Decimal)\n\u001b[0;32m      2\u001b[0m product[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMARGIN\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m product[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMARGIN\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mfloat\u001b[39m)\n\u001b[0;32m      3\u001b[0m order_details[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUNIT_SALE_PRICE\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m order_details[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUNIT_SALE_PRICE\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mfloat\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'product' is not defined"
      ]
     }
    ],
    "source": [
-    "product[\"PRODUCTION_COST\"] = product[\"PRODUCTION_COST\"].astype(float)\n",
+    "product[\"PRODUCTION_COST\"] = product[\"PRODUCTION_COST\"].astype(Decimal)\n",
     "product[\"MARGIN\"] = product[\"MARGIN\"].astype(float)\n",
     "order_details[\"UNIT_SALE_PRICE\"] = order_details[\"UNIT_SALE_PRICE\"].astype(float)\n",
     "order_details[\"UNIT_PRICE\"] = order_details[\"UNIT_PRICE\"].astype(float)\n",
@@ -208,7 +189,7 @@
     "# print()\n",
     "# print(returned_item.dtypes)\n",
     "# print()\n",
-    "print(target.dtypes)"
+    "# print(target.dtypes)"
    ]
   },
   {
